updated cp dashboard link

--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -70,13 +70,11 @@
 
         <!-- Information about the project -->
 
-
-     <div class="background-color">
-
-            <!-- Intro about project -->
+        <div class="background-color">
             <div class="context">
                 <div class="context-text">
-                <h2 class="large-text">Context</h2>
+                    <h1 class="large-text">Context</h1>
+               
                     <p class="para-img"> People like feeling important, so we have VIP sections or special events where
                         you must wait hours online or in line for a ticket. Having a membership is a way for people to
                         get the benefits of being significant but also want to have the flexibility to use it. The
@@ -106,9 +104,9 @@
                             style="width: 150px; height: auto;">
                         <h3> Emphaize/Discovery: </h3>
                         <ul class="cute-bullets">
-                            <li> Competitive analysis </li>
-                            <li> User testing </li>
-                            <li> UX analysis </li>
+                            <li> <a href="#compet"> Competitive analysis </a></li>
+                            <li> <a href="#testing"> User testing </a> </li>
+                            <li> <a href="#analysis"> UX analysis </a>  </li>
                         </ul>
                     </div>
                     <div class="">
@@ -116,8 +114,8 @@
                             style="width: 150px; height: auto;">
                         <h3> Ideate: </h3>
                         <ul class="cute-bullets">
-                            <li> Mid-fidelity prototype </li>
-                            <li> High fidelity prototype </li>
+                            <li> <a href="#wireframe">  Mid-fidelity prototype </a> </li>
+                            <li> <a href="#high"> High fidelity prototype </a> </li>
                         </ul>
                     </div>
                     <div class="">
@@ -125,17 +123,30 @@
                             style="width: 150px; height: auto;">
                         <h3> Testing: </h3>
                         <ul>
-                            <li> User testing </li>
+                            <li> <a href="">  User testing </a> </li>
                         </ul>
                         <h3> Rinse and repeat </h3>
                     </div>
                 </div>
-
+</div>
             </div>
+ 
+            <nav class="nav-link fixed-nav header small-text" id="NavBar">
+            <div class="flex">
+                <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
 
+                <ul class="link btns_more">
+                <ul class="link btns_more">
+               <li><a href="..//index.html#projects"> All projects</a>\</li>
+                 <li> <a href="ink-tank.html"> Making a tattoo appointment</a> \</li>  
+                 <li> <a href="about.html"> About Chiara </a> </li>   
+                </ul>
+            </div>
+        </nav>
 
+         <div class="project-conext-container">
             <div class="background-color dp-containter ar-w padding-5">
-                <h2> UX analysis</h2>
+                <h2 id="analysis"> UX analysis</h2>
                 <div class="flex ">
 
                     <p class="para-img">
@@ -153,7 +164,7 @@
             </div>
 
             <div class="padding-5">
-                <h2>Competitive analysis </h2>
+                <h2 id="compet">Competitive analysis </h2>
                 <div>
                     <p>
                         We decided to conduct user testing with the recent experience to see if the information made
@@ -179,7 +190,7 @@
             </div>
 
             <div class="context-with-image padding-5">
-                <h2>User testing</h2>
+                <h2 id="testing">User testing</h2>
                 <p>
                     We interviewed <b> 5 </b> participants who were current Carepass members and had done user testing
                     in the
@@ -230,7 +241,7 @@
             </div>
 
             <div class="padding-5">
-                <h2>Wireframes</h2>
+                <h2 id="wireframe">Mid-fidelity prototype</h2>
                 <p>
                     With the information gathered and syncing with the CVS persona, other designers and I worked
                     together to see how to make the information flow and not repeat information. The wireframe was also
@@ -242,7 +253,7 @@
                 <img src="https://i.ibb.co/cbbpkT9/Screen-Shot-2022-09-14-at-12-14-02-PM-2.png" style="width: 600px ;"
                     alt="Screen-Shot-2022-09-14-at-12-14-02-PM-2" border="0">
 
-                <h2> High-fidelity prototypes </h2>
+                <h2 id="high"> High-fidelity prototypes </h2>
                 <div>
                     <p>
                         At this time, Carepass was also introducing a new feature for gaining rewards with the number of
