--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -430,6 +430,7 @@
                 <ul class="cute-bullets">
                     <li> Waiting on survey data from a third-party organization about self-description, inclusivity
                         in the beauty industry, and shopping.</li>
+                        <li> Planning on how AI will assist with rating and reviews as well as for the shopping confront. </li>
                     <li> Find a way to educate users on identifying their skin and hair to assist with their
                         shopping and reviews. </li>
                     <li> Strategize how to implement the experience and components for other products with merch,
