--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -235,6 +235,7 @@
             <ul class="cute-bullets">
                 <li> There are multiple systems for hair that identify curl pattern, texture, and volume. </li>
                 <li> There are skin tones and undertones. </li>
+                <li> Using AI to aid on analyzing skin tone and hair type </li>
                 <li> Existing shoppers do believe that reviews help with their shopping experience. </li>
             </ul>
         </div>
