updated with and added nav to projects

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
     </div>
 
     <div class="project-container">
+                        <nav class="nav-link">
+                    <ul class="pages-links">
+                        <li><a id="projects" href="index.html#projects"> Projects </a></li>
+                        <li><a href="pages/about.html"> About Chiara  </a></li>
+                        <li><a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=sharing"
+                                rel="noopener noreferrer" target="_blank"> Resume > </a></li>
+                    </ul>
+                    </nav>
            <h1 class=""  id="projects"> Selected  Case Studies</h1>
         <div class="project-grid projects">
             <!--grid-->
