changed class and added id

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
 
     <div class="project-container">
-                        <nav class="nav-link">
+                        <nav class="nav-link fixed-nav header" id="NavBar">
                     <ul class="pages-links">
                         <li><a id="projects" href="index.html#projects"> Projects </a></li>
                         <li><a href="pages/about.html"> About Chiara  </a></li>
