updated the image size on the about me

--- a/pages/about.html
+++ b/pages/about.html
@@ -65,6 +65,7 @@
                     accessibility issues with designs and development. I enjoy building wireframes and prototypes,
                     conducting usability testing, and architecting user flows .
                 </p>
+                <p> Also, I have coded my site :) </p>
     
             </div>
             <div>
