--- a/index.html
+++ b/index.html
@@ -42,7 +42,22 @@
                 </div>
 
                 <div class="btns"></div>
-                <nav class="nav-link">
+
+            </div>
+        </div>
+
+        <div class="container_outer_img">
+            <div class="img-inner">
+                <img src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" width="75%" alt="chiaras-logo" border="0">
+            </div>
+        </div>
+    </div>
+
+    <div class="overlay"></div>
+
+    </div>
+
+                            <nav class="nav-link-two">
                     <ul class="pages-links">
                         <li><a id="projects" href="index.html#projects"> Projects </a></li>
                         <li><a href="pages/about.html"> About Chiara </a></li>
@@ -69,18 +84,6 @@
                                 target="_blank" class="fa fa-github"> </a> </li>
                     </ul>
                 </nav>
-            </div>
-        </div>
-        <div class="container_outer_img">
-            <div class="img-inner">
-                <img src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" width="75%" alt="chiaras-logo" border="0">
-            </div>
-        </div>
-    </div>
-
-    <div class="overlay"></div>
-
-    </div>
 
     <div class="project-container">
         <h1 class="" id="projects"> Selected Case Studies</h1>
@@ -100,7 +103,7 @@
                         <li class="tabs"> aOS </li>
 
                     </ul>
-                    <a href="pages/reviews-for-beauty-design.html">Read more about the rating and review project ></a>
+                    <a href="pages/reviews-for-beauty-design.html">Read more about the ratings project ></a>
                 </div>
 
 
@@ -200,22 +203,13 @@
                     <div class="context-background-img back-four"></div>
                 </a>
             </div>
-
         </div>
+        <div class="other">
+    <h2> other projects (work in progress) </h2>
+</div>
     </div>
     </div>
 
-            <nav class="nav-link fixed-nav header" id="NavBar">
-            <div class="flex">
-                <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
-                <ul class="link btns_more">
-                    <li><a id="projects" href="index.html#projects"> Projects </a></li>
-                    <li><a href="pages/about.html"> About Chiara </a></li>
-                    <li><a href="https://drive.google.com/file/d/1Nc7kUDzlG1zNBUpP-Akd33t6suefiMnj/view?usp=sharing"
-                            rel="noopener noreferrer" target="_blank"> Resume > </a></li>
-                </ul>
-            </div>
-        </nav>
     <!-- footer -->
     <footer class="footer-container">
         <div class="footer-content">
@@ -234,8 +228,7 @@
                     <li> <a href="mailto:chiara.boisaubin@gmail.com" aria-label="email" rel="noopener noreferrer"
                             target="_blank"> <span class="fa fa-envelope"> </span> </a> </li>
                     <li> <a href="https://calendly.com/chiara-boisaubin" aria-label="calendly" rel="noopener noreferrer"
-                            target="_blank"> <span class=" fa fa-solid fa-calendar-days"> </span> </a> </li>
-
+                            target="_blank"> <span class=" fa fa-solid fa-calendar"> </span> </a> </li>
 
                     <li> <a href="https://github.com/chiaraboisaubin" aria-label="github" rel="noopener noreferrer"
                             target="_blank"> <span class="fa fa-github"> </span> </a> </li>
