updated some of the following
designs and content

--- a/pages/carepass-dashboard.html
+++ b/pages/carepass-dashboard.html
@@ -25,55 +25,26 @@
 
 <body>
     <!-- nav -->
+    <nav class="nav-link fixed-nav header" id="NavBar">
+        <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
+        <ul class="link btns_more">
+            <li><a href="..//index.html#projects"> projects</a>\</li>
+            <li> <a href="about.html"> about </a> </li>
+        </ul>
+    </nav>
 
-
+    <!-- Hero -->
     <div class="content-container-project">
-        <header class="header-project">
-
+          <header class="header-project background-color-content">
             <h1> Membership dashboard redesign </h1>
         </header>
 
-            <nav class="nav-link fixed-nav header" id="NavBar">
-            <div class="flex">
-                <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
 
-                <ul class="link btns_more">
-                <ul class="link btns_more">
-               <li><a href="..//index.html#projects"> All projects</a>\</li>
-                 <li> <a href="ink-tank.html"> Making a tattoo appointment</a> \</li>  
-                 <li> <a href="about.html"> About Chiara </a> </li>   
-                </ul>
-            </div>
-        </nav>
-
-        <div class="project-information-container">
-            <div class="column-l">
-                <article> <b> My role: </b> UX/UI Designer </article>
-                <article> <b> Timeline: </b> April 2022 - Aug 2022 (2 week sprints)</article>
-                <article> <b> Team: </b> 3 UX/UI Designer, 2 A11Y Designer, 2 Content Designer, 1 UX Researcher
-                </article>
-            </div>
-            <div class="column-r list-tab">
-                <div class="">
-                    <h3> Platforms & tools </h3>
-                    <ul class="">
-                        <li class="project-tabs"> iOS </li>
-                        <li class="project-tabs"> aOS </li>
-                        <li class="project-tabs"> Figma </li>
-                        <li class="project-tabs"> Miro </li>
-                        <li class="project-tabs"> usertesting.com </li>
-                        <li class="project-tabs"> Adobe Creative Suite </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-
-        <!-- Information about the project -->
-
-        <div class="background-color">
+        <!-- Intro about project -->
+                 <!-- context -->
             <div class="context">
                 <div class="context-text">
-                    <h1 class="large-text">Context</h1>
+                    <h2 class="large-text">Context</h2>
                
                     <p class="para-img"> People like feeling important, so we have VIP sections or special events where
                         you must wait hours online or in line for a ticket. Having a membership is a way for people to
@@ -91,62 +62,69 @@
                 </div>
                 <img style="width: 600px;" src="https://i.ibb.co/T86G9vF/2-1-Membership-information.png"
                     alt="carepass dashboard setting page" border="0">
+            </div>
+     
+  <!-- project information -->
+        <div class="project-information-container">
+            <div class="column-l">
+                <p> <b> My role: </b> UX/UI Designer </p>
+                <p> <b> Timeline: </b> April 2022 - Aug 2022 (2 week sprints)</p>
+                <p> <b> Team: </b> 3 UX/UI Designer, 2 A11Y Designer, 2 Content Designer, 1 UX Researcher </p>
+            </div>
 
+            <div class="column-r list-tab">
+                <div class="">
+                    <h3> Platforms & tools </h3>
+                    <ul class="">
+                        <li class="project-tabs"> web </li>
+                        <li class="project-tabs"> Figma </li>
+                        <li class="project-tabs"> Miro </li>
+                        <li class="project-tabs"> usertesting.com </li>
+                        <li class="project-tabs"> Adobe Creative Suite </li>
+                    </ul>
+                </div>
             </div>
         </div>
 
+        <!-- Information about the project -->
+
         <div class="project-conext-container">
-            <div class="dp-containter  padding-10">
-                <h2>Design Process </h2>
-                <div class="wrap">
-                    <div class="">
-                        <img src="https://i.ibb.co/M9kmjMd/Discovery-t.png" alt="Discovery" border="0"
-                            style="width: 150px; height: auto;">
-                        <h3> Emphaize/Discovery: </h3>
+            <div class="dp-containter">
+                <h2> Design Process </h2>
+               <div class="dp-flex">
+                  <div class="process">
+                        <img src="https://i.ibb.co/M9kmjMd/Discovery-t.png" alt="Discovery" border="0">
+                        <h3> Discovery: </h3>
                         <ul class="cute-bullets">
                             <li> <a href="#compet"> Competitive analysis </a></li>
                             <li> <a href="#testing"> User testing </a> </li>
                             <li> <a href="#analysis"> UX analysis </a>  </li>
                         </ul>
                     </div>
-                    <div class="">
-                        <img src="https://i.ibb.co/hDhmvFq/ideate-t.png" alt="Ideate" border="0"
-                            style="width: 150px; height: auto;">
+                   <div class="process">
+                        <img src="https://i.ibb.co/hDhmvFq/ideate-t.png" alt="Ideate" border="0">
                         <h3> Ideate: </h3>
                         <ul class="cute-bullets">
                             <li> <a href="#wireframe">  Mid-fidelity prototype </a> </li>
                             <li> <a href="#high"> High fidelity prototype </a> </li>
                         </ul>
                     </div>
-                    <div class="">
-                        <img src="https://i.ibb.co/Gd16L5y/testing-t.png" alt="Testing" border="0"
-                            style="width: 150px; height: auto;">
+                  <div class="process">
+                        <img src="https://i.ibb.co/Gd16L5y/testing-t.png" alt="Testing" border="0">
                         <h3> Testing: </h3>
                         <ul>
                             <li> <a href="">  User testing </a> </li>
                         </ul>
-                        <h3> Rinse and repeat </h3>
                     </div>
                 </div>
-</div>
             </div>
- 
-            <nav class="nav-link fixed-nav header small-text" id="NavBar">
-            <div class="flex">
-                <img id="nav-logo" src="https://i.ibb.co/cLwFq9P/chiaras-logo-dark.png" alt="chiaras-logo" border="0">
-
-                <ul class="link btns_more">
-                <ul class="link btns_more">
-               <li><a href="..//index.html#projects"> All projects</a>\</li>
-                 <li> <a href="ink-tank.html"> Making a tattoo appointment</a> \</li>  
-                 <li> <a href="about.html"> About Chiara </a> </li>   
-                </ul>
             </div>
-        </nav>
 
          <div class="project-conext-container">
             <div class="background-color dp-containter ar-w padding-5">
-                <h2 id="analysis"> UX analysis</h2>
+                 <div class="desk">
+                <h2> Discovery </h2>
+                 <h3> UX analysis</h3>
                 <div class="flex ">
 
                     <p class="para-img">
@@ -163,8 +141,8 @@
                 </div>
             </div>
 
-            <div class="padding-5">
-                <h2 id="compet">Competitive analysis </h2>
+            <div class="competitive">
+                <h3> Competitive analysis </h3>
                 <div>
                     <p>
                         We decided to conduct user testing with the recent experience to see if the information made
@@ -172,14 +150,14 @@
                         updating their membership. I did competitive research on what other companies did for their
                         membership or dashboard pages.
                     </p>
-                    The companies looked into were:
+                   <h4>  The companies looked into were: </h4>
                     <ul class="cute-bullets">
                         <li> Walmart </li>
                         <li>Amazon </li>
                         <li> Target</li>
                         <li> Adobe </li>
                     </ul>
-                    <h3> Things that was noticed </h3>
+                    <h4> Things that was noticed </h4>
                     <ul class="cute-bullets">
                         <li> Maximum of two pages with information that connects with the membership </li>
                         <li> There was some type of content hierarchy of information </li>
@@ -188,9 +166,9 @@
 
                 </div>
             </div>
-
-            <div class="context-with-image padding-5">
-                <h2 id="testing">User testing</h2>
+   </div>
+            <div class="context-with-image">
+                <h3>User testing</h3>
                 <p>
                     We interviewed <b> 5 </b> participants who were current Carepass members and had done user testing
                     in the
@@ -310,7 +288,7 @@
                     and developers
                     could plan building.
                 </p>
-                For the developers, I did provide the following information in the Figma file:
+               <h3> For the developers, I did provide the following information in the Figma file: </h3> 
                 <ul class="cute-bullets">
                     <li> A11Y markups </li>
                     <li> Components and elements </li>
