--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -166,6 +166,31 @@
                     <li> Introduce new components for a design system.</li>
                     </ul> -->
             </div>
+            
+             <div class="final">
+                        <h3> How is this impactful?: </h3>
+                        <div class="impact">
+                            <div class="impact-context">
+                                <div class="impact-box">
+                                    <p class="impact-l-txt"> Over </p>
+                                    <p class="impact-txt"> 2 million</p>
+                                </div>
+                                <p> people shops on the CVS website and app daily. </p>
+                            </div>
+                            <div class="impact-context">
+                                <div class="impact-box">
+                                    <div class="impact">
+                                        <p> “I don’t really care about the description, I care about the reviews.” </p>
+                                    </div>
+                                </div>
+                                <p> With the <a
+                                        href="https://www.figma.com/design/MYKjejvVgbGqq6llXMBm3i/My-personal-site?node-id=1142-3414&m=dev">
+                                        Beymard Insitute case study #739 ‘Always Allow Users to Submit Product Reviews’
+                                    </a>, there findings was reviews was an estenial feature that assisted with people
+                                    making decsisons when shopping. </p>
+                            </div>
+                        </div>
+                    </div>
 
             <h3 class="">Initial goal </h3>
 
