--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         <div class="container_content">
             <div class="container_content_inner">
                 <div class="title">
-                    <p> Hi, I'm</p>
+                    <p> Hey, hey! <br> I'm</p>
                     <h1>Chiara B.</h1>
                     <p style="margin-bottom: 1em; font-size: 24px;"> (chee-r-ah) </p>
                 </div>
                 <div class="par">
                     <p> An <br> <span class="sub-title">UX / UI / Product Designer </span> <br>
-                        committed to intuitive, people-first solutions.</p>
+                       Making experiences work for people</p>
                 </div>
 
                 <div class="btns"></div>
