added links and adjusted space

--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -66,7 +66,6 @@
                 <p> <b> Timeline: </b> January 2023 - April 2023 (2 week sprints) </p>
                 <p> <b> Team of: </b> A11y designer, Content designer, User researcher, 2 developers, Product
                     manager</p>
-
             </div>
 
             <div class="column-r list-tab">
@@ -229,6 +228,7 @@
 
                     <div class="">
                         <div class="competitive">
+                            <div class="content">
                             <h3> Competitive analysis</h3>
                             <p>Broke down the Competitive analysis for learning what companies do for hair, skin
                                 foundations, and reviews </p>
@@ -243,17 +243,17 @@
                                 alt="1699281304941-b0c01e99-1409-4680-892d-858a69654db6-3-1" border="0">
                             <br>
                             <a
-                                href="https://www.figma.com/design/MYKjejvVgbGqq6llXMBm3i/My-personal-site?node-id=1144-486&m=dev">More
+                                href="https://drive.google.com/file/d/13uPpkciS9-vngGw8DbYgwyFZAGfGtrWT/view?usp=sharing" target="_blank">More
                                 the competitive analysis </a>
                         </div>
                     </div>
+                     </div>
 
                     <div class="border-r"></div>
 
                 </div>
-            </div>
 
-            <div class="learn">
+            <div class="competitive">
                 <h3> What was learn? </h3>
                 <ul class="cute-bullets">
                     <li> There are multiple systems for hair that identify curl pattern, texture, and volume. </li>
@@ -292,7 +292,7 @@
 
             <!-- user flow   -->
 
-            <div class="padding-5">
+            <div class="">
                 <h2> User Flow </h2>
                 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1000" height="450"
                     src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fboard%2FsUwvCuf9Zqz4Itnctwcqza%2FRatings-and-review%3Fnode-id%3D0-1%26t%3DPJRNnScjMPoLda2u-1"
@@ -336,6 +336,12 @@
                         <img src="">
 
                     </div>
+                     </div>
+<div class="competitive"> 
+    <h3> Adjusting the content in the with what we learned</h3>
+    <p> With the learnings on existing scales and ways to be inclusive,  I adjusted the features, but also added other categories that people may considered like time to use the product. </p>
+    <a href="https://drive.google.com/file/d/1pjH8eZe4gdPjD0HOa3VhuKV-DgWJ84vE/view?usp=sharing" target="_blank">Check out the before and after of the content </a>
+</div>
                     <!-- high - fi   -->
                     <div>
                         <div class="hifi-context">
@@ -358,12 +364,12 @@
 
                         <div class="writng background-color">
                             <h3 class="">When writing reviews </h3>
-                            <img src="">
+<img src="https://i.ibb.co/QjprdkxH/hifi-writing.png" alt="hifi writing" border="0">
                         </div>
 
                         <div class="writng background-color">
                             <h3>When reading reviews </h3>
-                            <img src="">
+<img src="https://i.ibb.co/Y7RBMPCz/hifi-search.png" alt="hifi search" border="0">
                         </div>
 
                         <!-- user testing -->
@@ -379,7 +385,7 @@
 
                             <h3>Some of the findings</h3>
 
-                            <ul>
+                            <ul class="cute-bullets">
                                 <li> 7/10 struggled with vague foundation shade names. </li>
                                 <li> 8/10 loved the inclusive approach but wanted clearer multi-selection. </li>
                                 <li> 3/10 (Caucasian participants) noted they rarely saw their hair type excluded,
@@ -388,7 +394,7 @@
                             </ul>
                             <p>With the data that was analyzed, we prioritize the information that people had a
                                 challenge with. For instead, Clearing up that a person can pick more than one pill. </p>
-                            <a href=""> more on the user testing </a>
+                            <a href="https://drive.google.com/file/d/1lDqvPIVRbjXx90WXDouxyzrQFD_6Bcbi/view?usp=sharing" target="_blank"> more on the user testing </a>
                         </div>
 
                         <div class="development background-color">
@@ -471,6 +477,7 @@
                                     <i> This is an example on how the ratings experience might look like for other
                                         products, like fabric softner. </i>
                                 </div>
+                                 </div>
                             </div>
                         </div>
                     </div>
@@ -479,12 +486,6 @@
         
     </div>
 
-    <nav class="nav-link-two fixed-nav header" id="NavBar">
-        <ul class="link btns_more">
-            <li><a href="..//index.html#projects"> projects </a> \</li>
-            <li> <a href="about.html"> about </a> </li>
-        </ul>
-    </nav>
 
     <!-- footer -->
     <footer class="footer-container">
