--- a/pages/expose-filter.html
+++ b/pages/expose-filter.html
@@ -44,9 +44,9 @@
         <!-- Information about the project -->
         <div class="project-information-container">
             <div class="column-l">
-                <article> <b> My role: </b> UX/UI Designer </article>
-                <article> <b> Timeline: </b> Aug 2023 - Nov 2023 (2 week sprints) </article>
-                <article> <b> Team: </b> 2 A11Y Designer, 1 Content Designer, 1 UX Researcher </article>
+                <p> <b> My role: </b> UX/UI Designer </p>
+                <p> <b> Timeline: </b> Aug 2023 - Nov 2023 (2 week sprints) </p>
+                <p> <b> Team: </b> 2 A11Y Designer, 1 Content Designer, 1 UX Researcher </p>
             </div>
             <div class="column-r list-tab">
                 <div class="">
