--- a/pages/chowdown.html
+++ b/pages/chowdown.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Chiara's portfolio  " />
     <meta property="og:image" content="https://i.ibb.co/DRPVXx1/Portfolio4chowdown.jpg" />
     <meta property="og:description" content=" Reservation seats and order at restaurants online" />
-    <meta property="og:url" content="https://chiaraboisaubin.com//chowdown.html />
+    <meta property="og:url" content="https://chiaraboisaubin.com//chowdown.html" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta property="og:type" content="website" />
