this nav is driving me insane

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     </div>
 
-                            <nav class="nav-link-two">
+                <nav class="nav-link-two">
                     <ul class="pages-links">
                         <li><a id="projects" href="index.html#projects"> Projects </a></li>
                         <li><a href="pages/about.html"> About Chiara </a></li>
@@ -86,10 +86,10 @@
                 </nav>
 
     <div class="project-container">
-        <h1 class="" id="projects"> Selected Case Studies</h1>
+        <h1 class=""> Selected Case Studies</h1>
         <div class="project-grid projects">
             <!--grid-->
-            <div class="div1 card-content-container">
+            <div class="div1 card-content-container" id="projects">
 
                 <div class="content-grid-text">
                     <h2> Personalizing reviews for beauty <br>
