copy right change

--- a/pages/about.html
+++ b/pages/about.html
@@ -64,7 +64,7 @@
                 <p> check out my work!  </p>
     
             </div>
-            <div>
+            <div class="about-img">
                 <img class="chiara-pic" src="https://i.postimg.cc/KcBpCy33/chi2-sq.jpg" alt="chi2-sq" border="0">
             </div>
         </div>
@@ -247,7 +247,7 @@
                                 target="_blank" class="fa fa-github">  </a>  </li>
             </ul>
         </nav>
-        <small class="copy"> © 2025 Designed and Coded by Chiara BoisAubin </small>
+        <small class="copy"> ©2026 Designed and Coded by Chiara BoisAubin </small>
     </div>
 </footer>
 
