updated about what i like icons

--- a/pages/about.html
+++ b/pages/about.html
@@ -188,9 +188,9 @@
         <div class="personal">
             <h2>I enjoy doing: </h2>
 
-            <div class="space-between">
+            <div class="flex">
                 <div class="personal-container">
-                    <img src="https://i.ibb.co/N61WQ0j/cooking-icon.png" alt="" border="0">
+                    <img src="https://i.ibb.co/XxTy87X3/cooking.png" alt="" border="0">
                     <p> Cooking </p>
                 </div>
 <!--
@@ -199,22 +199,21 @@
                     <img src="https://i.ibb.co/CsqpY3f/mingcute-movie-icon.png" alt="" border="0">
                     <p> Watching anime </p>
                 </div>
-                 -->
+-->
 
                 <div class="personal-container">
-                    <img src="https://i.ibb.co/H7c9J6G/pac-person-icon.png" alt="" border="0">
-                    <img>
+                    <img src="https://i.ibb.co/rjPWsVx/gaming.png" alt="" border="0">
                     <p> Gaming </p>
                 </div>
 
                 <div class="personal-container">
 
-                    <img src="https://i.ibb.co/w0KRrHs/motorcyle-icon.png" alt="" border="0">
+                    <img src="https://i.ibb.co/p62C79Zr/motorcycle.png" alt="" border="0">
                     <p> Riding Motorcyles </p>
                 </div>
 
                 <div class="personal-container">
-                    <img src="https://i.ibb.co/Y8hvMcM/craft-icon.png" alt="" border="0">
+                    <img src="https://i.ibb.co/NdwNwDhm/crafing.png" alt="" border="0">
                     <p> Crafting </p>
                 </div>
             </div>
