--- a/pages/reviews-for-beauty-design.html
+++ b/pages/reviews-for-beauty-design.html
@@ -332,7 +332,7 @@
 
                     <div class="writng background-color">
                         <h3 class="">When reading reviews </h3>
-                        <p> Thinkinking about how people with be able to shee the spefics tags </p>
+                        <p> Thinking about how people with be able to shee the spefics tags </p>
                         <img src="">
 
                     </div>
